k8s/editor/editor-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: editor
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: editor-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 50m
              memory: 128Mi

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: editor
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
      name: http
