k8s/editor/editor-nats.yaml

apiVersion: v1
kind: Service
metadata:
  name: nats-service
  namespace: editor
spec:
  selector:
    app: nats
  ports:
    - name: nats
      port: 4222
      targetPort: 4222
    - name: cluster
      port: 6222
      targetPort: 6222

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nats
  namespace: editor
spec:
  serviceName: nats-service
  replicas: 2
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2.10
          imagePullPolicy: IfNotPresent
          command:
            - nats-server
            - -c
            - /etc/nats/nats.conf
          resources:
            limits:
              memory: 128Mi
          ports:
            - containerPort: 4222
              name: nats
            - containerPort: 6222
              name: cluster
            - containerPort: 8222
              name: monitor
          volumeMounts:
            - name: nats-config
              mountPath: /etc/nats
            - name: nats-data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /healthz?js-server-only=true
              port: 8222
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: nats-config
          configMap:
            name: nats-config
        - name: nats-data
          persistentVolumeClaim:
            claimName: nats-pvc
  volumeClaimTemplates:
    - metadata:
        name: nats-data
        namespace: editor
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 128Mi
