k8s/editor/editor-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: editor
spec:
  selector:
    matchLabels:
      app: user
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: editor-user:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: app-config
              mountPath: /etc/app/
          ports:
            - containerPort: 8080
            - containerPort: 9090
              name: grpc
          resources:
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
      volumes:
        - name: app-config
          configMap:
            name: user-config

---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: editor
spec:
  type: NodePort
  selector:
    app: user
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
      name: http
    - protocol: "TCP"
      port: 9090
      targetPort: 9090
      name: grpc
