k8s/editor/00-editor.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: editor

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-auth
  namespace: editor
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: http://app.editor.local
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api$1$2
    nginx.ingress.kubernetes.io/auth-url: http://auth-service.editor.svc.cluster.local:8080/auth
    nginx.ingress.kubernetes.io/auth-response-headers: X-User-Id
spec:
  ingressClassName: "nginx"
  rules:
    - host: api.editor.local
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
          - path: /users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /doc(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: doc-service
                port:
                  number: 8080
          - path: /collab(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: collab-service
                port:
                  number: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-public
  namespace: editor
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: http://app.editor.local
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
spec:
  ingressClassName: "nginx"
  rules:
    - host: api.editor.local
      http:
        paths:
          - path: /auth/(sign_in|sign_up|refresh)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: editor
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: "nginx"
  rules:
    - host: app.editor.local
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
